--- a/front/register.html
+++ b/front/register.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<script type="text/javascript" src="js/vue-2.5.16.js"></script>
-
-    <script type="text/javascript" src="js/axios-0.18.0.min.js"></script>
+	<script type="text/javascript" src="js/axios-0.18.0.min.js"></script>
+	<script type="text/javascript" src="js/host.js"></script>
 </head>
 <body>
 	<div class="register_con">
@@ -88,5 +88,6 @@
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
 	<script type="text/javascript" src="js/register.js"></script>
+
 </body>
 </html>
